--- a/web/app/assets/stylesheets/components/me-collection.scss
+++ b/web/app/assets/stylesheets/components/me-collection.scss
@@ -1,5 +1,9 @@
 .me-collection {
 
+  &--empty {
+    position: relative;
+  }
+
   &[data-section-disposition="horizontal"] {
     & .mdc-layout-grid__inner {
       @include mobile-only {
@@ -34,6 +38,41 @@
     }
   }
 
+  & h2 {
+    margin: 6px 0 12px 0;
+    font-weight: 800;
+    //max-width: 90%;
+    line-height: 1.4em;
+    font-size: 24px;
+    color: $font-primary-color;
+    font-family: $font-primary-family;
+    position: relative;
+    z-index: 3;
+    letter-spacing: -0.01em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @include mobile-only {
+      font-size: 16px;
+      font-weight: 800;
+      line-height: 1em;
+      padding: 0 12px 0 $section-padding-phone;
+      justify-content: space-between;
+    }
+
+    [data-controller="movies"][data-action="index"] & {
+      @include mobile-only {
+        padding: 0;
+      }
+    }
+  }
+
+  &.me-collection--empty h2 {
+    color: $surface-secondary-color;
+    background-color: $surface-secondary-color;
+    width: max-content;
+  }
+
   &__head {
     margin-bottom: 24px;
     @include mobile-only {
@@ -61,6 +100,12 @@
       }
     }
 
+    .me-collection--empty & {
+      color: $surface-secondary-color;
+      background-color: $surface-secondary-color;
+      width: max-content;
+    }
+
     [data-controller="places"][data-action="show"] & {
       @include mobile-only {
         margin: 5px 0;
@@ -81,6 +126,12 @@
       padding: 0 $section-padding-phone;
       font-size: 10px;
     }
+
+    .me-collection--empty & {
+      color: $surface-secondary-color;
+      background-color: $surface-secondary-color;
+      width: max-content;
+    }
   }
 
   &__title-custom {
@@ -90,30 +141,11 @@
     }
   }
 
-  &__empty {
-    color: $font-secondary-color;
-    order: 8;
-    border-radius: 5px;
-    grid-column-end: span 3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 12px;
-    padding: 0 12px;
-    margin: 0 0 115px 0;
-    border: 1px solid $border-color;
-
-    & i {
-      font-size: 2em;
-    }
-  }
-
   &__load-more {
     text-align: center;
     padding: 12px 0;
     font-weight: 500;
+
     &:hover {
       background: $background-color;
     }
@@ -197,6 +229,21 @@
         }
       }
 
+    }
+  }
+
+  &__info {
+    .me-collection--empty & {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+      @include is-empty;
     }
   }
 
