--- a/web/app/assets/stylesheets/components/me-saves.scss
+++ b/web/app/assets/stylesheets/components/me-saves.scss
@@ -3,34 +3,15 @@
 $gutter: 6px;
 
 .me-saves {
-  //margin: 35px auto 35px auto;
-  //padding: 0 0 25px 0;
-  //max-width: $main-content-width;
   position: relative;
   @include mobile-only {
     margin: 0 auto 0 auto;
     max-width: unset;
-    //border-bottom: 5px solid $surface-tertiary-color;
-    //padding: 35px 0 35px 0;
   }
 
   &__title {
     display: flex;
     justify-content: space-between;
-
-    //& span {
-    //  font-size: 14px;
-    //  font-weight: 400;
-    //  display: flex;
-    //  align-items: center;
-    //  @include mobile-only {
-    //    display: none;
-    //  }
-    //}
-    //
-    //& svg {
-    //  padding-left: 6px;
-    //}
   }
 
   &__list {
@@ -78,28 +59,6 @@ $gutter: 6px;
       &.me-saves__list::after {
         opacity: 1;
       }
-    }
-  }
-
-  &__empty {
-    color: $font-secondary-color;
-    fill: $font-secondary-color;
-    order: 10;
-    border-radius: 3px;
-    grid-column-end: span 3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    font-size: 11px;
-    //margin: 26px 0 55px 0;
-    height: 66px;
-    padding: 0 12px;
-    // border: 1px solid $border-color;
-
-    & i {
-      font-size: 1.6em;
     }
   }
 
@@ -204,5 +163,34 @@ $gutter: 6px;
 
   & .me-icon--scroll-right {
     right: -30px;
+  }
+
+  &--empty {
+    pointer-events: none;
+    user-select: none;
+    & .mdc-card__media {
+      background-color: $surface-secondary-color;
+    }
+
+    & .me-card__date-distance-in-words {
+      background: $surface-secondary-color;
+      color: $surface-secondary-color;
+      width: max-content;
+    }
+  }
+
+  &__info {
+    .me-saves--empty & {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+      @include is-empty;
+    }
   }
 }
