--- a/web/app/views/components/_user_suggestions.html.erb
+++ b/web/app/views/components/_user_suggestions.html.erb
@@ -29,7 +29,7 @@
   <div class="me-user-suggestions me-user-suggestions--empty">
     <a href="/users">
       <div class="me-user-suggestions__info">
-      <span>
+      <span class="is-hoverable">
         Siga pessoas para ver seus eventos aqui
       </span>
       </div>
