--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -75,10 +75,8 @@
       </div>
     </div>
   </div>
-<% end %>
-
-
-<% if current_user and saved_events.empty? %>
+  
+<% else %>
   <div id="saves" class="me-saves me-saves--empty">
     <div class="me-saves__info">
       <span>
