--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -150,8 +150,8 @@
           <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "me-top-app-bar__logout" %>
         </div>
       <% else %>
-        <%= link_to root_path do %>
-          <button class="me-button mdc-button mdc-button--unelevated">Quero um convite</button>
+        <%= link_to new_user_session_path do %>
+          <button class="me-button mdc-button">Entrar</button>
         <% end %>
       <% end %>
     </section>
