--- a/web/app/views/bot/onboarding.html.erb
+++ b/web/app/views/bot/onboarding.html.erb
@@ -1,3 +1,7 @@
-<section class="me-page me-page--profile is-animated">
-  <%= render partial: 'components/swipable/swipable' %>
+<section class="me-page is-animated">
+  <section class="me-section">
+    <div class="me-section__inner">
+      <%= render partial: 'components/swipable/swipable' %>
+    </div>
+  </section>
 </section>
